[gd_scene load_steps=4 format=3 uid="uid://clk7mkyllhm0w"]

[ext_resource type="Script" uid="uid://n7q0bn72xg88" path="res://ui/dash_icon.gd" id="1_jgu4i"]
[ext_resource type="Texture2D" uid="uid://p0qphvtu3bmo" path="res://assets/Ui/Receptacle/Receptacle Sphere/BackgroundIron2.png" id="1_uq5ws"]
[ext_resource type="Texture2D" uid="uid://do30kelh4bscp" path="res://assets/Ui/Receptacle/Receptacle Sphere/ProgressGreen.png" id="2_jgu4i"]

[node name="DashIcon" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_jgu4i")

[node name="EmptyIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uq5ws")
stretch_mode = 5

[node name="ReadyIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jgu4i")
stretch_mode = 5

[node name="RechargeProgress" type="TextureProgressBar" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 27.0
value = 50.0
fill_mode = 5
texture_progress = ExtResource("2_jgu4i")

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true
